Small fix for button alignment inside media card

--- a/src/scss/blocks/core/button/_common.scss
+++ b/src/scss/blocks/core/button/_common.scss
@@ -90,5 +90,10 @@ $enable-button-block-styles:            true !default;
         .wp-block-button__link[class] {
             display: block;
         }
+        
+        > .wp-block {
+            margin-left: 0;
+            margin-right: 0;
+        }
     }
 }
